--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,10 +1,15 @@
 @charset "UTF-8";
 /*
-Theme Name: La fête du sleep
+Theme Name: Miya
 Author: Bemy Studio
 Author URI: https://bemy.studio
-Description: La fête du sleep
+Description: Theme du site Miya
 Version: 1.0
+Tested up to: 5.4
+Requires PHP: 5.6
+License: GNU General Public License v2 or later
+License URI: LICENSE
+Text Domain: miya
 */
 
 @import "tailwindcss/base";
