--- a/src/css/pages/_home.scss
+++ b/src/css/pages/_home.scss
@@ -29,6 +29,24 @@
 			height: 100%;
 			object-fit: cover;
 		}
+		&__img-caption {
+			position: absolute;
+			top: 50%;
+			right: 0;
+			max-width: 100%;
+			z-index: 1;
+			font-size: 10px;
+			line-height: 1;
+			padding: 5px;
+			background: $light;
+			transform-origin: top right;
+			transform: rotate(-90deg) translate(50%, -100%);
+
+			@media screen and (min-width: $lg) {
+				padding: 6px;
+				font-size: 11px;
+			}
+		}
 		&__text-content {
 			padding: 5vh var(--page-padding);
 
